force-app/main/default/objects/Form_LCF_Setup_Outcome_1__c/Form_LCF_Setup_Outcome_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Full Award Set-Up - Outcome - 1.0</description>
    <label>Form LCF Setup Outcome 1.0</label>
    <nameField>
        <displayFormat>SOU-{00000}</displayFormat>
        <label>Setup Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Setup Outcome 1.0</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>