force-app/main/default/objects/Form_LCF_Setup_Outcome_1__c/fields/so_baseline__c.field-meta.xml
<CustomField>
    <fullName>so_baseline__c</fullName>
    <description>Summarise the baseline methodology, what would is expected to happen as
compared to what would have happened had there been no intervention(s).</description>
    <inlineHelpText>What is the baseline for the outcome?</inlineHelpText>
    <label>SO - Baseline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>