force-app/main/default/objects/Form_LCF_Setup_Outcome_1__c/fields/so_description__c.field-meta.xml
<CustomField>
    <fullName>so_description__c</fullName>
    <inlineHelpText>Briefly describe the outcome</inlineHelpText>
    <label>SO - Description</label>
    <type>TextArea</type>
</CustomField>