force-app/main/default/objects/Form_LCF_Setup_Outcome_1__c/fields/so_service_users__c.field-meta.xml
<CustomField>
    <fullName>so_service_users__c</fullName>
    <inlineHelpText>What are the maximum service users expected to achieve this outcome?</inlineHelpText>
    <label>SO - Service Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>