force-app/main/default/objects/Form_LCF_Setup_Outcome_1__c/fields/so_social_impact__c.field-meta.xml
<CustomField>
    <fullName>so_social_impact__c</fullName>
    <description>Summarise the outcome’s impact on the service user concerned (and their immediate local community).</description>
    <inlineHelpText>What is the social impact for the outcome?</inlineHelpText>
    <label>SO - Social Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>