force-app/main/default/objects/Form_LCF_Setup_Outcome_1__c/fields/so_time_needed__c.field-meta.xml
<CustomField>
    <fullName>so_time_needed__c</fullName>
    <inlineHelpText>Outline the time needed for a service user to achieve the whole outcome</inlineHelpText>
    <label>SO - Time Needed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>