force-app/main/default/objects/Form_LCF_Setup_Outcome_1__c/fields/so_user_payment__c.field-meta.xml
<CustomField>
    <fullName>so_user_payment__c</fullName>
    <description>If you are not planning to pay on the basis of an individual achieving an outcome, put in the average figure for a typical individual, which is total outcome payments divided by total individuals achieving a successful outcome.</description>
    <inlineHelpText>How much will be paid per outcome per service user?</inlineHelpText>
    <label>SO - User Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>